--- a/templates/example_fullmap.html
+++ b/templates/example_fullmap.html
@@ -5,14 +5,29 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <title>Flask Google Maps Full Map Example</title>
+            <script src="../static/js/jquery-1.11.2.js"></script>
+            <script src="../static/js/search.js"></script>
     </head>
     <body>
-        <h1>Flask Google Maps Full Map Example</h1>
-        <div id="fullmap" style='height:100%;width:100%;top:0;left:0;position:absolute;z-index:200;'>
+        <div class="jumbotron">
+          <h1>Pokemon Go Map</h1>
+          <form class="form-signin">
+          <label for="address" class="sr-only">Address</label>
+          <input type="address" name="address" id="address" class="form-control" placeholder="Address" required autofocus>
+          <label for="city" class="sr-only">City</label>
+          <input type="city" name="city" id="city" class="form-control" placeholder="City" required autofocus>
+          <label for="state" class="sr-only">State</label>
+          <input type="state" name="state" id="state" class="form-control" placeholder="State" required>
+
+          <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">Search</button>
+        </form>
+        </div>
+
+        <div id="fullmap" style='height:90%;width:100%;top:100px;left:0;position:absolute;z-index:200;'>
             {{ fullmap.html }}
 
         </div>
-        
+
 
     </body>
 {{ fullmap.js }}
@@ -25,20 +40,20 @@
         $('.label-countdown').each(function (index, element) {
             var disappearsAt = new Date(parseInt(element.getAttribute("disappears-at"))*1000);
             var now = new Date();
-            
+
             var difference = Math.abs(disappearsAt - now);
             var hours = Math.floor(difference / 36e5);
             var minutes = Math.floor((difference - (hours * 36e5)) / 6e4);
             var seconds = Math.floor((difference - (hours * 36e5) - (minutes * 6e4)) / 1e3);
-            
+
             if(disappearsAt < now){
                 timestring = "(expired)";
-            } 
+            }
             else {
                 timestring = "(";
                 if(hours > 0)
                     timestring = hours + "h";
-                
+
                 timestring += ("0" + minutes).slice(-2) + "m";
                 timestring += ("0" + seconds).slice(-2) + "s";
                 timestring += ")";
@@ -50,7 +65,7 @@
 
     window.setInterval(setLabelTime, 1000);
 
-  
+
   </script>
   {% if auto_refresh %}
     <script type="text/javascript">
@@ -146,7 +161,7 @@
             $.get(baseURL + "/data", function(response){
                 var json_obj = $.parseJSON(response);
                 var now = new Date();
-                
+
                 for (var index in json_obj) {
                     var item = json_obj[index];
                     var key = item["type"]+item["key"];
